Add Cost Efficiency and Faster Time to Productivity to SSO solution slide

--- a/google-workspace-sso-sagemaker/slides/introduction.html
+++ b/google-workspace-sso-sagemaker/slides/introduction.html
@@ -475,6 +475,24 @@
                         Prove who has access and why in minutes, not hours.
                     </p>
                 </div>
+
+                <div class="card solution-card">
+                    <div class="icon">&#128176;</div>
+                    <h3>Cost Efficiency</h3>
+                    <p style="color: #94a3b8; line-height: 1.6;">
+                        No need for separate identity management tools.
+                        Reduce administrative overhead and licensing costs.
+                    </p>
+                </div>
+
+                <div class="card solution-card">
+                    <div class="icon">&#128640;</div>
+                    <h3>Faster Time to Productivity</h3>
+                    <p style="color: #94a3b8; line-height: 1.6;">
+                        New team members get AWS access on day one.
+                        No tickets, no waiting, just seamless onboarding.
+                    </p>
+                </div>
             </div>
         </div>
         <div class="slide-number">3 / 6</div>
@@ -640,7 +658,7 @@ Permission Set: DataScientist
                     <a href="https://github.com/herley-shaori/cloud-diktat-aws-provisioning"
                        target="_blank"
                        style="color: #a5b4fc; text-decoration: none; font-family: 'Fira Code', monospace; font-size: 1.1rem;">
-                        github.com/herley-shaori/cloud-diktat-aws-provisioning
+                        https://github.com/herley-shaori/cloud-diktat-aws-provisioning
                     </a>
                 </p>
             </div>
