Add Hidden Costs and Inconsistent Policies to Identity Sprawl problems

--- a/google-workspace-sso-sagemaker/slides/introduction.html
+++ b/google-workspace-sso-sagemaker/slides/introduction.html
@@ -428,6 +428,24 @@
                         Separate identity systems make this error-prone and time-consuming.
                     </p>
                 </div>
+
+                <div class="card problem-card">
+                    <div class="icon">&#128176;</div>
+                    <h3>Hidden Costs</h3>
+                    <p style="color: #94a3b8; line-height: 1.6;">
+                        Managing multiple identity systems requires dedicated tools and personnel.
+                        Licensing fees and administrative overhead add up quickly.
+                    </p>
+                </div>
+
+                <div class="card problem-card">
+                    <div class="icon">&#128679;</div>
+                    <h3>Inconsistent Policies</h3>
+                    <p style="color: #94a3b8; line-height: 1.6;">
+                        Different systems enforce different password and MFA requirements.
+                        Security policies become fragmented and difficult to maintain.
+                    </p>
+                </div>
             </div>
         </div>
         <div class="slide-number">2 / 6</div>
