Add elegant AWS indicator badge to Service Provider Details section

--- a/google-workspace-sso-sagemaker/slides/google_workspace_setup/google_workspace_setup.html
+++ b/google-workspace-sso-sagemaker/slides/google_workspace_setup/google_workspace_setup.html
@@ -569,9 +569,12 @@
                             <strong style="color: #8b5a2b;">User Access</strong>
                             <p style="color: #6b5344; font-size: 0.9rem; margin-top: 5px;">ON for 1 group (Data Scientist) - Only this group can SSO</p>
                         </div>
-                        <div style="background: rgba(255,255,255,0.5); padding: 15px; border-radius: 10px;">
+                        <div style="background: rgba(255,255,255,0.5); padding: 15px; border-radius: 10px; position: relative;">
                             <strong style="color: #8b5a2b;">Service Provider Details</strong>
-                            <p style="color: #6b5344; font-size: 0.9rem; margin-top: 5px;">ACS URL and Entity ID from AWS IAM Identity Center</p>
+                            <p style="color: #6b5344; font-size: 0.9rem; margin-top: 5px;">ACS URL and Entity ID - obtain these values from AWS IAM Identity Center</p>
+                            <div style="display: inline-flex; align-items: center; gap: 5px; margin-top: 8px; padding: 4px 10px; background: rgba(255, 153, 0, 0.15); border: 1px solid rgba(255, 153, 0, 0.3); border-radius: 20px; font-size: 0.75rem; color: #b45309;">
+                                <span style="font-size: 0.85rem;">&#9729;</span> From AWS
+                            </div>
                         </div>
                         <div style="background: rgba(255,255,255,0.5); padding: 15px; border-radius: 10px;">
                             <strong style="color: #8b5a2b;">SAML Attribute Mapping</strong>
