Fix back link to introduction.html after path change

--- a/google-workspace-sso-sagemaker/slides/google_workspace_setup/google_workspace_setup.html
+++ b/google-workspace-sso-sagemaker/slides/google_workspace_setup/google_workspace_setup.html
@@ -274,7 +274,7 @@
     </style>
 </head>
 <body>
-    <a href="../introduction.html" class="back-link">&#8592; Back to Introduction</a>
+    <a href="../introduction/introduction.html" class="back-link">&#8592; Back to Introduction</a>
 
     <nav>
         <a href="#slide1"></a>
